--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
     "react-router": "^7.6.3",
+    "sonner": "^2.0.6",
     "tailwindcss": "^4.1.11",
     "zod": "^4.0.5"
   },
